--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "php": "^7.1.3",
         "cybercog/laravel-likeable": "^3.1",
         "fideloper/proxy": "^4.0",
+        "intervention/image": "^2.4",
         "laravel/framework": "5.8.*",
+        "laravel/passport": "^7.2",
         "laravel/tinker": "^1.0",
         "overtrue/laravel-follow": "^1.1"
     },
